k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.kube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracking-service
                port:
                  number: 8080
